refactor #202: 카테고리 단계별 조회 구현